[MODORDERS-1120] - Support populating searchLocationId for correct tenant during order opening (#957)
[MODORDERS-1120] - Support populating searchLocationId for correct tenant during order opening